Rename to Bright Minds Tutoring

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Math Atelier — Private Tutoring by Mariam</title>
-  <meta name="description" content="1:1 math tutoring with crystal‑clear explanations, exam tactics, and friendly accountability. High school & first‑year university." />
+  <title>Bright Minds Tutoring — Private Tutoring by Mohamad Mounir</title>  <meta name="description" content="1:1 math tutoring with crystal‑clear explanations, exam tactics, and friendly accountability. High school & first‑year university." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;700;800&display=swap" rel="stylesheet">
@@ -27,7 +26,7 @@
     <div class="max-w-7xl mx-auto px-4 py-3 flex items-center justify-between">
       <a href="#top" class="flex items-center gap-3">
         <svg width="30" height="30" viewBox="0 0 24 24" fill="none" class="text-[color:var(--brand)]"><circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="1.5"/><path d="M6 15c2-4 6-6 12-6" stroke="currentColor" stroke-width="1.5"/></svg>
-        <span class="font-extrabold text-lg">Math Atelier</span>
+        <span class="font-extrabold text-lg">Bright Minds Tutoring</span>
       </a>
       <nav class="hidden md:flex items-center gap-6 text-sm">
         <a href="#subjects" class="hover:text-[color:var(--brand)]">Subjects</a>
@@ -318,7 +317,7 @@
 
   <footer class="border-t border-slate-200 py-10">
     <div class="max-w-7xl mx-auto px-4 flex flex-col md:flex-row items-center justify-between gap-4 text-sm text-slate-600">
-      <div>© <span id="year"></span> Math Atelier — Mohamad Mounir Yassin</div>
+      <div>© <span id="year"></span> Bright Minds Tutoring — Mohamad Mounir Yassin</div>
       <div class="flex gap-4">
         <a href="#top" class="hover:text-[color:var(--brand)]">Top</a>
         <a href="#" class="hover:text-[color:var(--brand)]">Privacy</a>
