Fix WhatsApp subject default + select first subject on level change

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Bright Minds Tutoring — Private Tutoring by Mohamad Mounir</title>
-  <meta name="description" content="1:1 Cambridge IGCSE & A Level tutoring across Mathematics, Biology, Chemistry, Physics, Computer Science, Economics, English, ICT, and more. Clear explanations, exam tactics, and friendly accountability." />
+<meta name="description" content="1:1 Cambridge IGCSE & A Level tutoring in Additional Maths, Maths (0580/0607), Chemistry (0620/0971), Physics (0625/0972), Computer Science (0478/0984), ICT (0417), Science Combined (0653) & Co-ordinated (0654); plus A Level Biology (9700), Chemistry (9701), Computer Science (9618/9608), Further Maths (9231), and Maths 9709 (Pure, Mechanics, Probability & Statistics). Clear explanations, exam tactics, friendly accountability." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;700;800&display=swap" rel="stylesheet">
@@ -57,7 +57,7 @@
         <div>
           <h1 class="text-4xl md:text-6xl font-extrabold leading-[1.05]">IGCSE & A-Level. <span class="text-[color:var(--brand)]">Clear</span>. <span class="text-[color:var(--accent)]">Confident</span>.</h1>
           <p class="mt-5 text-lg text-slate-700">
-            Friendly 1:1 Cambridge tutoring across Mathematics, Biology, Chemistry, Physics, Computer Science, Economics, English, ICT, and more.
+            Friendly 1:1 Cambridge tutoring in Additional Maths, Maths (0580/0607), Chemistry (0620/0971), Physics (0625/0972), Computer Science (0478/0984), ICT (0417), Science Combined (0653) & Co-ordinated (0654); plus A Level Biology (9700), Chemistry (9701), Computer Science (9618/9608), Further Maths (9231), and Maths 9709 (Pure, Mechanics, Probability & Statistics).
             Learn the <em>why</em>, master the <em>how</em>, and walk into exams calm.
           </p>
           <div class="mt-6 flex flex-wrap gap-3">
@@ -107,63 +107,43 @@
       <div id="igcse" class="mt-10">
         <h3 class="text-2xl font-bold">IGCSE</h3>
         <div class="mt-6 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Additional Mathematics (0606)</h4></article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Biology 9–1 (0970)</h4></article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Biology (0610)</h4></article>
+  <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Additional Mathematics (0606)</h4></article>
+  <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Chemistry 9–1 (0971)</h4></article>
+  <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Chemistry (0620)</h4></article>
 
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Chemistry 9–1 (0971)</h4></article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Chemistry (0620)</h4></article>
+  <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Computer Science 9–1 (0984)</h4></article>
+  <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Computer Science (0478)</h4></article>
+  <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">ICT (0417)</h4></article>
 
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Computer Science 9–1 (0984)</h4></article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Computer Science (0478)</h4></article>
+  <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Mathematics International (0607)</h4></article>
+  <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Mathematics (0580)</h4></article>
 
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Economics 9–1 (0987)</h4></article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Economics (0455)</h4></article>
+  <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Physics 9–1 (0972)</h4></article>
+  <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Physics (0625)</h4></article>
 
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">English 1st Language (0500)</h4></article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">English 2nd Language (0510)</h4></article>
+  <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Science Combined (0653)</h4></article>
+  <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Science Co-ordinated (0654)</h4></article>
+</div>
 
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">History (0470)</h4></article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">ICT (0417)</h4></article>
-
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Mathematics 9–1 (0980)</h4></article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Mathematics International (0607)</h4></article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Mathematics (0580)</h4></article>
-
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Physics 9–1 (0972)</h4></article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Physics (0625)</h4></article>
-
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Religious Studies (0490)</h4></article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Science Combined (0653)</h4></article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Science Co-ordinated (0654)</h4></article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Sciences — Co-ordinated 9–1 (0973)</h4></article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Sociology (0495)</h4></article>
-        </div>
       </div>
 
       <!-- A Level -->
       <div id="alevel" class="mt-16">
         <h3 class="text-2xl font-bold">A Level</h3>
         <div class="mt-6 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Biology (9700)</h4></article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Chemistry (9701)</h4></article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Computer Science (9618 / 9608)</h4><p class="mt-1 text-xs text-slate-500">incl. syllabus from 2021</p></article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Economics (9708)</h4></article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Further Mathematics (9231)</h4></article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">History (9389)</h4></article>
+  <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Biology (9700)</h4></article>
+  <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Chemistry (9701)</h4></article>
+  <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Computer Science (from 2021) (9618)</h4></article>
+  <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Computer Science (9608)</h4></article>
 
-          <article class="rounded-2xl p-6 bg-white border border-slate-200">
-            <h4 class="font-semibold">Mathematics (9709)</h4>
-            <ul class="mt-2 text-sm text-slate-600 list-disc list-inside">
-              <li>Pure Mathematics — P1, P2, P3</li>
-              <li>Mechanics — M1, M2</li>
-              <li>Probability & Statistics — S1, S2</li>
-            </ul>
-          </article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Mathematics Mechanics (9709) — M1, M2</h4></article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Mathematics Probability & Statistics (9709) — S1, S2</h4></article>
-          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Mathematics Pure (9709) — P1, P2, P3</h4></article>
-        </div>
+  <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Further Mathematics (9231)</h4></article>
+  <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Mathematics Mechanics (9709)</h4></article>
+
+  <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Mathematics Probability & Statistics 1 (9709)</h4></article>
+  <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Mathematics Pure Math 1 (9709)</h4></article>
+  <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Mathematics Pure Math 2,3 (9709)</h4></article>
+</div>
+
       </div>
 
       <p class="mt-8 text-sm text-slate-600">Don’t see your syllabus code? Ask—I likely cover it or can prepare fast.</p>
@@ -325,31 +305,9 @@
     <label class="block text-sm md:col-span-1">
       Subject
       <select id="wa-subject" class="mt-1 w-full rounded-xl border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-[color:var(--brand)]">
-        <!-- IGCSE defaults; JS swaps list when level changes -->
-        <option>Mathematics (0580)</option>
-        <option>Mathematics 9–1 (0980)</option>
-        <option>Mathematics International (0607)</option>
-        <option>Additional Mathematics (0606)</option>
-        <option>Biology (0610)</option>
-        <option>Biology 9–1 (0970)</option>
-        <option>Chemistry (0620)</option>
-        <option>Chemistry 9–1 (0971)</option>
-        <option>Physics (0625)</option>
-        <option>Physics 9–1 (0972)</option>
-        <option>Computer Science (0478)</option>
-        <option>Computer Science 9–1 (0984)</option>
-        <option>Economics (0455)</option>
-        <option>Economics 9–1 (0987)</option>
-        <option>English 1st Language (0500)</option>
-        <option>English 2nd Language (0510)</option>
-        <option>ICT (0417)</option>
-        <option>History (0470)</option>
-        <option>Science Combined (0653)</option>
-        <option>Science Co-ordinated (0654)</option>
-        <option>Sciences — Co-ordinated 9–1 (0973)</option>
-        <option>Religious Studies (0490)</option>
-        <option>Sociology (0495)</option>
-      </select>
+  <option disabled selected value="">Select subject…</option>
+</select>
+
     </label>
 
     <label class="block text-sm md:col-span-1">
@@ -417,45 +375,49 @@
   const WA_NUMBER = "966508318820";
 
   const SUBJECTS = {
-    "IGCSE": [
-      "Mathematics (0580)",
-      "Mathematics 9–1 (0980)",
-      "Mathematics International (0607)",
-      "Additional Mathematics (0606)",
-      "Biology (0610)", "Biology 9–1 (0970)",
-      "Chemistry (0620)", "Chemistry 9–1 (0971)",
-      "Physics (0625)", "Physics 9–1 (0972)",
-      "Computer Science (0478)", "Computer Science 9–1 (0984)",
-      "Economics (0455)", "Economics 9–1 (0987)",
-      "English 1st Language (0500)", "English 2nd Language (0510)",
-      "ICT (0417)", "History (0470)",
-      "Science Combined (0653)", "Science Co-ordinated (0654)", "Sciences — Co-ordinated 9–1 (0973)",
-      "Religious Studies (0490)", "Sociology (0495)"
-    ],
-    "A Level": [
-      "Mathematics (9709) — Pure P1,P2,P3",
-      "Mathematics (9709) — Mechanics M1,M2",
-      "Mathematics (9709) — Probability & Statistics S1,S2",
-      "Further Mathematics (9231)",
-      "Biology (9700)", "Chemistry (9701)", "Physics (9702)",
-      "Computer Science (9618 / 9608)",
-      "Economics (9708)", "History (9389)"
-    ]
-  };
+  "IGCSE": [
+    "Additional Mathematics (0606)",
+    "Chemistry 9–1 (0971)",
+    "Chemistry (0620)",
+    "Computer Science 9–1 (0984)",
+    "Computer Science (0478)",
+    "ICT (0417)",
+    "Mathematics International (0607)",
+    "Mathematics (0580)",
+    "Physics 9–1 (0972)",
+    "Physics (0625)",
+    "Science Combined (0653)",
+    "Science Co-ordinated (0654)"
+  ],
+  "A Level": [
+    "Biology (9700)",
+    "Chemistry (9701)",
+    "Computer Science (from 2021) (9618)",
+    "Computer Science (9608)",
+    "Further Mathematics (9231)",
+    "Mathematics Mechanics (9709)",
+    "Mathematics Probability & Statistics 1 (9709)",
+    "Mathematics Pure Math 1 (9709)",
+    "Mathematics Pure Math 2,3 (9709)"
+  ]
+};
+
 
   const levelEl = document.getElementById('wa-level');
   const subjectEl = document.getElementById('wa-subject');
 
   function refreshSubjects() {
-    if (!levelEl || !subjectEl) return; // guard if contact block not on page
-    const level = levelEl.value;
-    subjectEl.innerHTML = '';
-    (SUBJECTS[level] || []).forEach(s => {
-      const opt = document.createElement('option');
-      opt.textContent = s;
-      subjectEl.appendChild(opt);
-    });
-  }
+  if (!levelEl || !subjectEl) return;
+  const level = levelEl.value;
+  subjectEl.innerHTML = '';
+  (SUBJECTS[level] || []).forEach((s, i) => {
+    const opt = document.createElement('option');
+    opt.textContent = s;
+    if (i === 0) opt.selected = true; // select the first subject by default
+    subjectEl.appendChild(opt);
+  });
+}
+
   if (levelEl && subjectEl) {
     levelEl.addEventListener('change', refreshSubjects);
     refreshSubjects(); // initialize
@@ -466,7 +428,9 @@
     waSendBtn.addEventListener('click', () => {
       const name = (document.getElementById('wa-name')?.value || '').trim() || 'Student';
       const level = levelEl?.value || 'IGCSE';
-      const subject = subjectEl?.value || 'Mathematics (0580)';
+      const currentList = SUBJECTS[level] || [];
+const subject = subjectEl?.value || currentList[0] || 'Mathematics (0580)';
+
       const code = (document.getElementById('wa-code')?.value || '').trim();
       const goal = (document.getElementById('wa-goal')?.value || '').trim() || 'Soon';
       const time = (document.getElementById('wa-time')?.value || '').trim() || 'Flexible';
