--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             Learn the <em>why</em>, master the <em>how</em>, and walk into exams calm.
           </p>
           <div class="mt-6 flex flex-wrap gap-3">
-            <a href="#contact" class="rounded-xl px-5 py-3 text-white" style="background:var(--brand)">Book a Free Intro</a>
+<a href="#whatsapp" class="rounded-xl px-5 py-3 text-white" style="background:var(--brand)">Book a Free Intro</a>
             <a href="#subjects" class="rounded-xl px-5 py-3 border border-slate-300 hover:border-[color:var(--brand)]">Explore Subjects</a>
           </div>
           <ul class="mt-6 text-sm text-slate-600 grid sm:grid-cols-2 gap-2">
@@ -193,7 +193,7 @@
             <li>Homework Q&A</li>
             <li>Parent summary</li>
           </ul>
-          <a href="#contact" class="mt-5 rounded-xl px-4 py-2 text-white text-center" style="background:var(--brand)">Choose</a>
+<a href="#whatsapp" class="mt-5 rounded-xl px-4 py-2 text-white text-center" style="background:var(--brand)">Choose</a>
         </div>
         <div class="rounded-3xl border-2 border-[color:var(--brand)] bg-white p-6 shadow-md flex flex-col">
           <div class="text-xs font-bold px-3 py-1 rounded-full w-max text-white" style="background:var(--brand)">Most booked</div>
@@ -204,7 +204,7 @@
             <li>Custom study plan</li>
             <li>Progress tracking</li>
           </ul>
-          <a href="#contact" class="mt-5 rounded-xl px-4 py-2 text-white text-center" style="background:var(--brand)">Choose</a>
+<a href="#whatsapp" class="mt-5 rounded-xl px-4 py-2 text-white text-center" style="background:var(--brand)">Choose</a>
         </div>
         <div class="rounded-3xl border border-slate-200 bg-white p-6 flex flex-col">
           <div class="text-xs font-bold px-3 py-1 rounded-full w-max" style="background:rgba(14,165,164,.15); color:var(--brand)">Exam</div>
@@ -215,7 +215,7 @@
             <li>Daily practice set</li>
             <li>Priority support</li>
           </ul>
-          <a href="#contact" class="mt-5 rounded-xl px-4 py-2 text-white text-center" style="background:var(--brand)">Choose</a>
+<a href="#whatsapp" class="mt-5 rounded-xl px-4 py-2 text-white text-center" style="background:var(--brand)">Choose</a>
         </div>
       </div>
       <p class="mt-3 text-xs text-slate-500">Update with your actual rates & currency.</p>
@@ -280,9 +280,6 @@
             <li><strong>Phone:</strong> <a href="tel:+966508318820" class="underline" style="color:var(--brand)">+96650 831-8820</a></li>
             <li><strong>Hours:</strong> Weekdays 9–8, Weekends 10–6</li>
           </ul>
-          <div class="mt-6">
-            <a href="#" class="rounded-xl px-5 py-3 text-white" style="background:var(--brand)">Book on Calendly (add link)</a>
-          </div>
           <!-- WhatsApp Quick Contact -->
 <div id="whatsapp" class="mt-8 rounded-3xl border border-slate-200 p-6 bg-white shadow-sm">
   <h3 class="font-bold text-lg">Quick WhatsApp Message</h3>
@@ -338,16 +335,6 @@
 </div>
 
         </div>
-        <form action="https://formspree.io/f/yourFormID" method="POST" class="rounded-3xl border border-slate-200 p-6 bg-white shadow-sm">
-          <h3 class="font-bold text-lg">Message</h3>
-          <div class="mt-4 grid gap-4">
-            <label class="block text-sm">Name<input name="name" required class="mt-1 w-full rounded-xl border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-[color:var(--brand)]"/></label>
-            <label class="block text-sm">Email<input name="email" type="email" required class="mt-1 w-full rounded-xl border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-[color:var(--brand)]"/></label>
-            <label class="block text-sm">What do you need help with?<textarea name="message" rows="4" required class="mt-1 w-full rounded-xl border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-[color:var(--brand)]"></textarea></label>
-            <button type="submit" class="rounded-xl px-4 py-2 text-white" style="background:var(--brand)">Send</button>
-            <p class="text-xs text-slate-500">Replace the action URL with your Formspree endpoint or another form tool.</p>
-          </div>
-        </form>
       </div>
     </div>
   </section>
@@ -444,7 +431,7 @@ Preferred time: ${time}.
 My name: ${name}.`;
 
       const url = `https://wa.me/${WA_NUMBER}?text=${encodeURIComponent(msg)}`;
-      window.open(url, '_blank');
+window.open(url, '_blank', 'noopener,noreferrer');
     });
   }
 </script>
