--- a/index.html
+++ b/index.html
@@ -390,6 +390,14 @@ window.open(url, '_blank', 'noopener,noreferrer');
     });
   }
 </script>
+<!-- Floating WhatsApp button -->
+<a href="#whatsapp" 
+   class="fixed bottom-6 right-6 w-14 h-14 rounded-full shadow-lg flex items-center justify-center"
+   style="background:var(--brand);">
+  <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" viewBox="0 0 24 24">
+    <path d="M20.52 3.48A11.8 11.8 0 0012 0C5.37 0 .01 5.37.01 12c0 2.12.56 4.18 1.63 6.01L0 24l6.19-1.62A11.96 11.96 0 0012 24c6.63 0 12-5.37 12-12 0-3.19-1.24-6.2-3.48-8.52zM12 21.82c-1.87 0-3.68-.5-5.27-1.44l-.38-.22-3.68.97.98-3.6-.25-.38A9.75 9.75 0 012.2 12C2.2 6.39 6.4 2.2 12 2.2c2.6 0 5.04 1.01 6.88 2.86A9.7 9.7 0 0121.8 12c0 5.6-4.2 9.82-9.8 9.82zm5.41-7.46c-.3-.15-1.77-.87-2.04-.97-.27-.1-.46-.15-.66.15-.2.3-.76.96-.94 1.16-.17.2-.35.22-.65.07-.3-.15-1.27-.47-2.42-1.49-.9-.8-1.51-1.78-1.69-2.08-.18-.3-.02-.46.13-.61.13-.13.3-.35.45-.53.15-.18.2-.3.3-.5.1-.2.05-.38-.02-.53-.08-.15-.66-1.59-.91-2.17-.24-.58-.49-.5-.66-.51h-.56c-.2 0-.53.08-.8.38-.27.3-1.05 1.02-1.05 2.48s1.08 2.88 1.23 3.08c.15.2 2.13 3.25 5.16 4.55.72.31 1.28.5 1.72.64.72.23 1.38.2 1.9.12.58-.09 1.77-.72 2.02-1.42.25-.7.25-1.3.18-1.42-.07-.12-.26-.2-.56-.35z"/>
+  </svg>
+</a>
 
 </body>
 </html>
