Keep Select placeholders for Level/Subject; remove auto-select; neutral WA message fallbacks; update hero to include IB

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Bright Minds Tutoring — Private Tutoring by Mohamad Mounir</title>
-<meta name="description" content="1:1 Cambridge IGCSE & A Level tutoring in Additional Maths, Maths (0580/0607), Chemistry (0620/0971), Physics (0625/0972), Computer Science (0478/0984), ICT (0417), Science Combined (0653) & Co-ordinated (0654); plus A Level Biology (9700), Chemistry (9701), Computer Science (9618/9608), Further Maths (9231), and Maths 9709 (Pure, Mechanics, Probability & Statistics). Clear explanations, exam tactics, friendly accountability." />
+<meta name="description" content="1:1 tutoring for IB Diploma, Cambridge IGCSE & A Level. IB: Biology, Chemistry, Economics, Further Math, Global Politics, Mathematical Studies, Math, Math AA, Math AI, Philosophy, Physics, Psychology, World Religions. IGCSE & A Level: Maths, Additional Maths, Chemistry, Physics, CS, ICT, Combined & Co-ordinated Science, Further Maths. Clear explanations, exam tactics, friendly accountability." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;700;800&display=swap" rel="stylesheet">
@@ -53,9 +53,11 @@
     <div class="max-w-7xl mx-auto px-4 py-16 md:py-24 relative">
       <div class="grid md:grid-cols-2 gap-10 items-center">
         <div>
-          <h1 class="text-4xl md:text-6xl font-extrabold leading-[1.05]">IGCSE & A-Level. <span class="text-[color:var(--brand)]">Clear</span>. <span class="text-[color:var(--accent)]">Confident</span>.</h1>
+<h1 class="text-4xl md:text-6xl font-extrabold leading-[1.05]">
+  IB, IGCSE & A-Level. <span class="text-[color:var(--brand)]">Clear</span>. <span class="text-[color:var(--accent)]">Confident</span>.
+</h1>
           <p class="mt-5 text-lg text-slate-700">
-            Friendly 1:1 Cambridge tutoring in Additional Maths, Maths (0580/0607), Chemistry (0620/0971), Physics (0625/0972), Computer Science (0478/0984), ICT (0417), Science Combined (0653) & Co-ordinated (0654); plus A Level Biology (9700), Chemistry (9701), Computer Science (9618/9608), Further Maths (9231), and Maths 9709 (Pure, Mechanics, Probability & Statistics).
+Friendly 1:1 tutoring for IB Diploma, Cambridge IGCSE & A Level.
             Learn the <em>why</em>, master the <em>how</em>, and walk into exams calm.
           </p>
           <div class="mt-6 flex flex-wrap gap-3">
@@ -99,7 +101,27 @@
   <section id="subjects" class="py-16 md:py-24 bg-slate-50">
     <div class="max-w-7xl mx-auto px-4">
       <h2 class="text-3xl md:text-4xl font-extrabold">Subjects I teach</h2>
-      <p class="mt-2 text-slate-600">Cambridge International Examinations — IGCSE & A Level</p>
+<p class="mt-2 text-slate-600">IB Diploma, Cambridge IGCSE & A Level</p>
+
+      <!-- IB Diploma -->
+      <div id="ibdiploma" class="mt-10">
+        <h3 class="text-2xl font-bold">IB Diploma</h3>
+        <div class="mt-6 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
+          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Biology</h4></article>
+          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Chemistry</h4></article>
+          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Economics</h4></article>
+          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Further Mathematics</h4></article>
+          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Global Politics</h4></article>
+          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Mathematical Studies</h4></article>
+          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Mathematics</h4></article>
+          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Mathematics AA</h4></article>
+          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Mathematics AI</h4></article>
+          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Philosophy</h4></article>
+          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Physics</h4></article>
+          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">Psychology</h4></article>
+          <article class="rounded-2xl p-6 bg-white border border-slate-200"><h4 class="font-semibold">World Religions</h4></article>
+        </div>
+      </div>
 
       <!-- IGCSE -->
       <div id="igcse" class="mt-10">
@@ -249,9 +271,13 @@
     <label class="block text-sm">
       Level
       <select id="wa-level" class="mt-1 w-full rounded-xl border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-[color:var(--brand)]">
-        <option value="IGCSE">IGCSE</option>
-        <option value="A Level">A Level</option>
-      </select>
+  <option disabled selected value="">Select level…</option>
+  <option value="IB Diploma">IB Diploma</option>
+  <option value="IGCSE">IGCSE</option>
+  <option value="A Level">A Level</option>
+</select>
+
+
     </label>
 
     <label class="block text-sm md:col-span-1">
@@ -278,11 +304,11 @@
     </label>
   </div>
 
-  <button id="wa-send"
-    class="mt-5 rounded-xl px-5 py-3 text-white w-full md:w-auto"
-    style="background:var(--brand)">
-    💬 Message on WhatsApp
-  </button>
+  <button id="wa-send" type="button"
+  class="mt-5 rounded-xl px-5 py-3 text-white w-full md:w-auto"
+  style="background:var(--brand)">
+  💬 Message on WhatsApp
+</button>
 
   <p class="mt-2 text-xs text-slate-500">
     If WhatsApp doesn’t open on desktop, try on your phone—or copy the message after the button opens WhatsApp.
@@ -317,6 +343,21 @@
   const WA_NUMBER = "966508318820";
 
   const SUBJECTS = {
+  "IB Diploma": [
+    "Biology",
+    "Chemistry",
+    "Economics",
+    "Further Mathematics",
+    "Global Politics",
+    "Mathematical Studies",
+    "Mathematics",
+    "Mathematics AA",
+    "Mathematics AI",
+    "Philosophy",
+    "Physics",
+    "Psychology",
+    "World Religions"
+  ],
   "IGCSE": [
     "Additional Mathematics (0606)",
     "Chemistry 9–1 (0971)",
@@ -351,14 +392,24 @@
   function refreshSubjects() {
   if (!levelEl || !subjectEl) return;
   const level = levelEl.value;
+
+  // Always reset with a placeholder first
   subjectEl.innerHTML = '';
-  (SUBJECTS[level] || []).forEach((s, i) => {
+  const placeholder = document.createElement('option');
+  placeholder.disabled = true;
+  placeholder.selected = true;
+  placeholder.value = '';
+  placeholder.textContent = 'Select subject…';
+  subjectEl.appendChild(placeholder);
+
+  (SUBJECTS[level] || []).forEach((s) => {
     const opt = document.createElement('option');
+    opt.value = s;
     opt.textContent = s;
-    if (i === 0) opt.selected = true; // select the first subject by default
     subjectEl.appendChild(opt);
   });
 }
+
 
   if (levelEl && subjectEl) {
     levelEl.addEventListener('change', refreshSubjects);
@@ -369,35 +420,49 @@
   if (waSendBtn) {
     waSendBtn.addEventListener('click', () => {
       const name = (document.getElementById('wa-name')?.value || '').trim() || 'Student';
-      const level = levelEl?.value || 'IGCSE';
-      const currentList = SUBJECTS[level] || [];
-const subject = subjectEl?.value || currentList[0] || 'Mathematics (0580)';
+const level = (levelEl?.value || '').trim();
+const subject = (subjectEl?.value || '').trim();
 
-      const code = (document.getElementById('wa-code')?.value || '').trim();
-      const goal = (document.getElementById('wa-goal')?.value || '').trim() || 'Soon';
-      const time = (document.getElementById('wa-time')?.value || '').trim() || 'Flexible';
+const code = (document.getElementById('wa-code')?.value || '').trim();
+const goal = (document.getElementById('wa-goal')?.value || '').trim();
+const time = (document.getElementById('wa-time')?.value || '').trim();
 
-      const codeBit = code ? ` (${code})` : '';
-      const msg =
+// Simple, professional validation so we don't send with placeholders
+if (!level) {
+  alert('Please select your level.');
+  levelEl?.focus();
+  return;
+}
+if (!subject) {
+  alert('Please select your subject.');
+  subjectEl?.focus();
+  return;
+}
+
+const codeBit = code ? ` (${code})` : '';
+
+const msg =
 `Hi Bright Minds Tutoring,
 I'd like help with: ${level} — ${subject}${codeBit}.
-My goal/exam date: ${goal}.
-Preferred time: ${time}.
+My goal/exam date: ${goal || 'Not specified'}.
+Preferred time: ${time || 'Not specified'}.
 My name: ${name}.`;
 
-      const url = `https://wa.me/${WA_NUMBER}?text=${encodeURIComponent(msg)}`;
+const url = `https://wa.me/${WA_NUMBER}?text=${encodeURIComponent(msg)}`;
 window.open(url, '_blank', 'noopener,noreferrer');
+
     });
   }
 </script>
 <!-- Floating WhatsApp button -->
-<a href="#whatsapp" 
+<a href="#whatsapp" title="Open WhatsApp quick form"
    class="fixed bottom-6 right-6 w-14 h-14 rounded-full shadow-lg flex items-center justify-center"
    style="background:var(--brand);">
   <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" viewBox="0 0 24 24">
     <path d="M20.52 3.48A11.8 11.8 0 0012 0C5.37 0 .01 5.37.01 12c0 2.12.56 4.18 1.63 6.01L0 24l6.19-1.62A11.96 11.96 0 0012 24c6.63 0 12-5.37 12-12 0-3.19-1.24-6.2-3.48-8.52zM12 21.82c-1.87 0-3.68-.5-5.27-1.44l-.38-.22-3.68.97.98-3.6-.25-.38A9.75 9.75 0 012.2 12C2.2 6.39 6.4 2.2 12 2.2c2.6 0 5.04 1.01 6.88 2.86A9.7 9.7 0 0121.8 12c0 5.6-4.2 9.82-9.8 9.82zm5.41-7.46c-.3-.15-1.77-.87-2.04-.97-.27-.1-.46-.15-.66.15-.2.3-.76.96-.94 1.16-.17.2-.35.22-.65.07-.3-.15-1.27-.47-2.42-1.49-.9-.8-1.51-1.78-1.69-2.08-.18-.3-.02-.46.13-.61.13-.13.3-.35.45-.53.15-.18.2-.3.3-.5.1-.2.05-.38-.02-.53-.08-.15-.66-1.59-.91-2.17-.24-.58-.49-.5-.66-.51h-.56c-.2 0-.53.08-.8.38-.27.3-1.05 1.02-1.05 2.48s1.08 2.88 1.23 3.08c.15.2 2.13 3.25 5.16 4.55.72.31 1.28.5 1.72.64.72.23 1.38.2 1.9.12.58-.09 1.77-.72 2.02-1.42.25-.7.25-1.3.18-1.42-.07-.12-.26-.2-.56-.35z"/>
   </svg>
 </a>
+
 
 </body>
 </html>
